got items and prices selected to print out with total

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,7 +38,11 @@
 	<input type="button" value="checkout" onclick="printCart()" />
 	
 	<p id="finalCart"></p> 
-	<div id="list">
+	
+	<div id="listOfItems">
+	</div>
+	
+	<div id="listOfPrices">
 	</div>
 
 	<script src="JavaScript.js"></script>
